--- a/.htaccess
+++ b/.htaccess
@@ -13,3 +13,72 @@ RewriteRule ^emplois/?$ offre_cdd_marketing.html [L,R=301]
 # (décommentez ces 2 lignes si vous êtes sûr que cela ne perturbe pas vos assets)
 #RewriteCond %{REQUEST_FILENAME} !-f
 #RewriteRule ^([^\.]+)/?$ $1.html [L]
+
+# =====================================================
+# OPTIMISATIONS PERFORMANCES PAGESPEED
+# =====================================================
+
+# Compression GZIP
+<IfModule mod_deflate.c>
+  AddOutputFilterByType DEFLATE text/html text/plain text/xml text/css text/javascript application/javascript application/x-javascript application/json application/xml application/rss+xml image/svg+xml
+</IfModule>
+
+# Mise en cache navigateur
+<IfModule mod_expires.c>
+  ExpiresActive On
+  
+  # Images
+  ExpiresByType image/jpg "access plus 1 year"
+  ExpiresByType image/jpeg "access plus 1 year"
+  ExpiresByType image/gif "access plus 1 year"
+  ExpiresByType image/png "access plus 1 year"
+  ExpiresByType image/webp "access plus 1 year"
+  ExpiresByType image/svg+xml "access plus 1 year"
+  ExpiresByType image/x-icon "access plus 1 year"
+  
+  # CSS et JavaScript
+  ExpiresByType text/css "access plus 1 month"
+  ExpiresByType application/javascript "access plus 1 month"
+  ExpiresByType text/javascript "access plus 1 month"
+  
+  # Polices
+  ExpiresByType font/woff "access plus 1 year"
+  ExpiresByType font/woff2 "access plus 1 year"
+  ExpiresByType application/font-woff "access plus 1 year"
+  ExpiresByType application/font-woff2 "access plus 1 year"
+  
+  # HTML
+  ExpiresByType text/html "access plus 1 hour"
+  
+  # Défaut
+  ExpiresDefault "access plus 1 month"
+</IfModule>
+
+# En-têtes Cache-Control
+<IfModule mod_headers.c>
+  # Images et médias - 1 an
+  <FilesMatch "\.(jpg|jpeg|png|gif|webp|svg|ico|pdf|mp4|webm)$">
+    Header set Cache-Control "max-age=31536000, public, immutable"
+  </FilesMatch>
+  
+  # CSS et JS - 1 mois
+  <FilesMatch "\.(css|js)$">
+    Header set Cache-Control "max-age=2592000, public"
+  </FilesMatch>
+  
+  # Polices - 1 an
+  <FilesMatch "\.(woff|woff2|ttf|otf|eot)$">
+    Header set Cache-Control "max-age=31536000, public, immutable"
+  </FilesMatch>
+  
+  # HTML - 1 heure
+  <FilesMatch "\.(html|htm)$">
+    Header set Cache-Control "max-age=3600, public, must-revalidate"
+  </FilesMatch>
+</IfModule>
+
+# Désactiver ETags (améliore la mise en cache)
+<IfModule mod_headers.c>
+  Header unset ETag
+</IfModule>
+FileETag None
